[package]
name = "headless-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant wallet-headless orchestrator for Hathor Network — spins up isolated Docker containers per session"
authors = ["Hathor Labs"]
license = "MIT"

[dependencies]
axum = "0.7"
bollard = "0.18"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
